dotnet/versioned_docs/version-1.17/api/class-locator.mdx
---
id: class-locator
title: "Locator"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Locator represents a view to the element(s) on the page. It captures the logic sufficient to retrieve the element at any given moment. Locator can be created with the [Page.Locator(selector)](./api/class-page.mdx#page-locator) method.

```csharp
var locator = page.Locator("text=Submit");
await locator.ClickAsync();
```

The difference between the Locator and [ElementHandle] is that the latter points to a particular element, while Locator captures the logic of how to retrieve that element.

In the example below, handle points to a particular DOM element on page. If that element changes text or is used by React to render an entirely different component, handle is still pointing to that very DOM element. This can lead to unexpected behaviors.

```csharp
var handle = await page.QuerySelectorAsync("text=Submit");
await handle.HoverAsync();
await handle.ClickAsync();
```

With the locator, every time the `element` is used, up-to-date DOM element is located in the page using the selector. So in the snippet below, underlying DOM element is going to be located twice.

```csharp
var locator = page.Locator("text=Submit");
await locator.HoverAsync();
await locator.ClickAsync();
```

**Strictness**

Locators are strict. This means that all operations on locators that imply some target DOM element will throw if more than one element matches given selector.

```csharp
// Throws if there are several buttons in DOM:
await page.Locator("button").ClickAsync();

// Works because we explicitly tell locator to pick the first element:
await page.Locator("button").First.ClickAsync();

// Works because Count knows what to do with multiple matches:
await page.Locator("button").CountAsync();
```

**Lists**

You can also use locators to work with the element lists.

```csharp
// Locate elements, this locator points to a list.
var rows = page.Locator("table tr");

// Pattern 1: use locator methods to calculate text on the whole list.
var texts = await rows.AllTextContentsAsync();

// Pattern 2: do something with each element in the list:
var count = await rows.CountAsync()
for (let i = 0; i < count; ++i)
  Console.WriteLine(await rows.Nth(i).TextContentAsync());

// Pattern 3: resolve locator to elements on page and map them to their text content
// Note: the code inside evaluateAll runs in page, you can call any DOM apis there
var texts = await rows.EvaluateAllAsync("list => list.map(element => element.textContent)");
```


- [Locator.AllInnerTextsAsync()](./api/class-locator.mdx#locator-all-inner-texts)
- [Locator.AllTextContentsAsync()](./api/class-locator.mdx#locator-all-text-contents)
- [Locator.BoundingBoxAsync(options)](./api/class-locator.mdx#locator-bounding-box)
- [Locator.CheckAsync(options)](./api/class-locator.mdx#locator-check)
- [Locator.ClickAsync(options)](./api/class-locator.mdx#locator-click)
- [Locator.CountAsync()](./api/class-locator.mdx#locator-count)
- [Locator.DblClickAsync(options)](./api/class-locator.mdx#locator-dblclick)
- [Locator.DispatchEventAsync(type, eventInit, options)](./api/class-locator.mdx#locator-dispatch-event)
- [Locator.ElementHandleAsync(options)](./api/class-locator.mdx#locator-element-handle)
- [Locator.ElementHandlesAsync()](./api/class-locator.mdx#locator-element-handles)
- [Locator.EvaluateAllAsync(expression, arg)](./api/class-locator.mdx#locator-evaluate-all)
- [Locator.EvaluateAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate)
- [Locator.EvaluateHandleAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate-handle)
- [Locator.FillAsync(value, options)](./api/class-locator.mdx#locator-fill)
- [Locator.First](./api/class-locator.mdx#locator-first)
- [Locator.FocusAsync(options)](./api/class-locator.mdx#locator-focus)
- [Locator.FrameLocator(selector)](./api/class-locator.mdx#locator-frame-locator)
- [Locator.GetAttributeAsync(name, options)](./api/class-locator.mdx#locator-get-attribute)
- [Locator.HoverAsync(options)](./api/class-locator.mdx#locator-hover)
- [Locator.InnerHTMLAsync(options)](./api/class-locator.mdx#locator-inner-html)
- [Locator.InnerTextAsync(options)](./api/class-locator.mdx#locator-inner-text)
- [Locator.InputValueAsync(options)](./api/class-locator.mdx#locator-input-value)
- [Locator.IsCheckedAsync(options)](./api/class-locator.mdx#locator-is-checked)
- [Locator.IsDisabledAsync(options)](./api/class-locator.mdx#locator-is-disabled)
- [Locator.IsEditableAsync(options)](./api/class-locator.mdx#locator-is-editable)
- [Locator.IsEnabledAsync(options)](./api/class-locator.mdx#locator-is-enabled)
- [Locator.IsHiddenAsync(options)](./api/class-locator.mdx#locator-is-hidden)
- [Locator.IsVisibleAsync(options)](./api/class-locator.mdx#locator-is-visible)
- [Locator.Last](./api/class-locator.mdx#locator-last)
- [Locator.Locator(selector)](./api/class-locator.mdx#locator-locator)
- [Locator.Nth(index)](./api/class-locator.mdx#locator-nth)
- [Locator.PressAsync(key, options)](./api/class-locator.mdx#locator-press)
- [Locator.ScreenshotAsync(options)](./api/class-locator.mdx#locator-screenshot)
- [Locator.ScrollIntoViewIfNeededAsync(options)](./api/class-locator.mdx#locator-scroll-into-view-if-needed)
- [Locator.SelectOptionAsync(values, options)](./api/class-locator.mdx#locator-select-option)
- [Locator.SelectTextAsync(options)](./api/class-locator.mdx#locator-select-text)
- [Locator.SetCheckedAsync(checked, options)](./api/class-locator.mdx#locator-set-checked)
- [Locator.SetInputFilesAsync(files, options)](./api/class-locator.mdx#locator-set-input-files)
- [Locator.TapAsync(options)](./api/class-locator.mdx#locator-tap)
- [Locator.TextContentAsync(options)](./api/class-locator.mdx#locator-text-content)
- [Locator.TypeAsync(text, options)](./api/class-locator.mdx#locator-type)
- [Locator.UncheckAsync(options)](./api/class-locator.mdx#locator-uncheck)
- [Locator.WaitForAsync(options)](./api/class-locator.mdx#locator-wait-for)

## Locator.AllInnerTextsAsync() {#locator-all-inner-texts}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-all-inner-texts-return"/> &#60;[IEnumerable]<[string]>&#62;<a href="#locator-all-inner-texts-return" class="list-anchor">#</a>

Returns an array of `node.innerText` values for all matching nodes.

## Locator.AllTextContentsAsync() {#locator-all-text-contents}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-all-text-contents-return"/> &#60;[IEnumerable]<[string]>&#62;<a href="#locator-all-text-contents-return" class="list-anchor">#</a>

Returns an array of `node.textContent` values for all matching nodes.

## Locator.BoundingBoxAsync(options) {#locator-bounding-box}
- `options` &#60;`LocatorBoundingBoxOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-bounding-box-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-bounding-box-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-bounding-box-return"/> &#60;BoundingBox?&#62;<a href="#locator-bounding-box-return" class="list-anchor">#</a>
  - `x` &#60;[double]&#62; the x coordinate of the element in pixels.
  - `y` &#60;[double]&#62; the y coordinate of the element in pixels.
  - `width` &#60;[double]&#62; the width of the element in pixels.
  - `height` &#60;[double]&#62; the height of the element in pixels.

This method returns the bounding box of the element, or `null` if the element is not visible. The bounding box is calculated relative to the main frame viewport - which is usually the same as the browser window.

Scrolling affects the returned bonding box, similarly to [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect). That means `x` and/or `y` may be negative.

Elements from child frames return the bounding box relative to the main frame, unlike the [Element.getBoundingClientRect](https://developer.mozilla.org/en-US/docs/Web/API/Element/getBoundingClientRect).

Assuming the page is static, it is safe to use bounding box coordinates to perform input. For example, the following snippet should click the center of the element.

```csharp
var box = await element.BoundingBoxAsync();
await page.Mouse.ClickAsync(box.X + box.Width / 2, box.Y + box.Height / 2);
```

## Locator.CheckAsync(options) {#locator-check}
- `options` &#60;`LocatorCheckOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-check-option-force" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-check-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-check-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-check-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-check-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-check-return"/> &#60;[void]&#62;<a href="#locator-check-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already checked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.ClickAsync(options) {#locator-click}
- `options` &#60;`LocatorClickOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#locator-click-option-button" class="list-anchor">#</a>
  - `ClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-click-count"/> &#60;[int]?&#62; defaults to 1. See [UIEvent.detail].<a href="#locator-click-option-click-count" class="list-anchor">#</a>
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-delay"/> &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#locator-click-option-delay" class="list-anchor">#</a>
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-click-option-force" class="list-anchor">#</a>
  - `Modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-modifiers"/> &#60;[IEnumerable]?<`enum KeyboardModifier { Alt, Control, Meta, Shift }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-click-option-modifiers" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-click-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-click-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-click-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-click-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-click-return"/> &#60;[void]&#62;<a href="#locator-click-return" class="list-anchor">#</a>

This method clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.CountAsync() {#locator-count}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-count-return"/> &#60;[int]&#62;<a href="#locator-count-return" class="list-anchor">#</a>

Returns the number of elements matching given selector.

## Locator.DblClickAsync(options) {#locator-dblclick}
- `options` &#60;`LocatorDblClickOptions?`&#62;
  - `Button`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-button"/> &#60;`enum MouseButton { Left, Right, Middle }?`&#62; Defaults to `left`.<a href="#locator-dblclick-option-button" class="list-anchor">#</a>
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-delay"/> &#60;[double]?&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#locator-dblclick-option-delay" class="list-anchor">#</a>
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-dblclick-option-force" class="list-anchor">#</a>
  - `Modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-modifiers"/> &#60;[IEnumerable]?<`enum KeyboardModifier { Alt, Control, Meta, Shift }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-dblclick-option-modifiers" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-dblclick-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-dblclick-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-dblclick-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-dblclick-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dblclick-return"/> &#60;[void]&#62;<a href="#locator-dblclick-return" class="list-anchor">#</a>

This method double clicks the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to double click in the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set. Note that if the first click of the `dblclick()` triggers a navigation event, this method will throw.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`element.dblclick()` dispatches two `click` events and a single `dblclick` event.
:::

## Locator.DispatchEventAsync(type, eventInit, options) {#locator-dispatch-event}
- `type`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-type"/> &#60;[string]&#62; DOM event type: `"click"`, `"dragstart"`, etc.<a href="#locator-dispatch-event-option-type" class="list-anchor">#</a>
- `eventInit`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-event-init"/> &#60;[EvaluationArgument]?&#62; Optional event-specific initialization properties.<a href="#locator-dispatch-event-option-event-init" class="list-anchor">#</a>
- `options` &#60;`LocatorDispatchEventOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-dispatch-event-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-dispatch-event-return"/> &#60;[void]&#62;<a href="#locator-dispatch-event-return" class="list-anchor">#</a>

The snippet below dispatches the `click` event on the element. Regardless of the visibility state of the element, `click` is dispatched. This is equivalent to calling [element.click()](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/click).

```csharp
await element.DispatchEventAsync("click");
```

Under the hood, it creates an instance of an event based on the given `type`, initializes it with `eventInit` properties and dispatches it on the element. Events are `composed`, `cancelable` and bubble by default.

Since `eventInit` is event-specific, please refer to the events documentation for the lists of initial properties:
* [DragEvent](https://developer.mozilla.org/en-US/docs/Web/API/DragEvent/DragEvent)
* [FocusEvent](https://developer.mozilla.org/en-US/docs/Web/API/FocusEvent/FocusEvent)
* [KeyboardEvent](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/KeyboardEvent)
* [MouseEvent](https://developer.mozilla.org/en-US/docs/Web/API/MouseEvent/MouseEvent)
* [PointerEvent](https://developer.mozilla.org/en-US/docs/Web/API/PointerEvent/PointerEvent)
* [TouchEvent](https://developer.mozilla.org/en-US/docs/Web/API/TouchEvent/TouchEvent)
* [Event](https://developer.mozilla.org/en-US/docs/Web/API/Event/Event)

You can also specify `JSHandle` as the property value if you want live objects to be passed into the event:

```csharp
var dataTransfer = await page.EvaluateHandleAsync("() => new DataTransfer()");
await element.DispatchEventAsync("dragstart", new Dictionary<string, object>
{
    { "dataTransfer", dataTransfer }
});
```

## Locator.ElementHandleAsync(options) {#locator-element-handle}
- `options` &#60;`LocatorElementHandleOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handle-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-element-handle-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handle-return"/> &#60;[ElementHandle]&#62;<a href="#locator-element-handle-return" class="list-anchor">#</a>

Resolves given locator to the first matching DOM element. If no elements matching the query are visible, waits for them up to a given timeout. If multiple elements match the selector, throws.

## Locator.ElementHandlesAsync() {#locator-element-handles}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-element-handles-return"/> &#60;[IEnumerable]<[ElementHandle]>&#62;<a href="#locator-element-handles-return" class="list-anchor">#</a>

Resolves given locator to all matching DOM elements.

## Locator.EvaluateAsync(expression, arg, options) {#locator-evaluate}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-expression"/> &#60;[string]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-arg"/> &#60;[EvaluationArgument]?&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-option-arg" class="list-anchor">#</a>
- `options` &#60;`LocatorEvaluateOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-evaluate-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-return"/> &#60;[object]&#62;<a href="#locator-evaluate-return" class="list-anchor">#</a>

Returns the return value of `expression`.

This method passes this handle as the first argument to `expression`.

If `expression` returns a [Promise], then `handle.evaluate` would wait for the promise to resolve and return its value.

Examples:

```csharp
var tweets = page.Locator(".tweet .retweets");
Assert.Equals("10 retweets", await tweets.EvaluateAsync("node => node.innerText"));
```

## Locator.EvaluateAllAsync(expression, arg) {#locator-evaluate-all}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-option-expression"/> &#60;[string]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-all-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-option-arg"/> &#60;[EvaluationArgument]?&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-all-option-arg" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-all-return"/> &#60;[object]&#62;<a href="#locator-evaluate-all-return" class="list-anchor">#</a>

The method finds all elements matching the specified locator and passes an array of matched elements as a first argument to `expression`. Returns the result of `expression` invocation.

If `expression` returns a [Promise], then [Locator.EvaluateAllAsync(expression, arg)](./api/class-locator.mdx#locator-evaluate-all) would wait for the promise to resolve and return its value.

Examples:

```csharp
var elements = page.Locator("div");
var divsCount = await elements.EvaluateAll<bool>("(divs, min) => divs.length >= min", 10);
```

## Locator.EvaluateHandleAsync(expression, arg, options) {#locator-evaluate-handle}
- `expression`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-expression"/> &#60;[string]&#62; JavaScript expression to be evaluated in the browser context. If it looks like a function declaration, it is interpreted as a function. Otherwise, evaluated as an expression.<a href="#locator-evaluate-handle-option-expression" class="list-anchor">#</a>
- `arg`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-arg"/> &#60;[EvaluationArgument]?&#62; Optional argument to pass to `expression`.<a href="#locator-evaluate-handle-option-arg" class="list-anchor">#</a>
- `options` &#60;`LocatorEvaluateHandleOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-evaluate-handle-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-evaluate-handle-return"/> &#60;[JSHandle]&#62;<a href="#locator-evaluate-handle-return" class="list-anchor">#</a>

Returns the return value of `expression` as a [JSHandle].

This method passes this handle as the first argument to `expression`.

The only difference between [Locator.EvaluateAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate) and [Locator.EvaluateHandleAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate-handle) is that [Locator.EvaluateHandleAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate-handle) returns [JSHandle].

If the function passed to the [Locator.EvaluateHandleAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate-handle) returns a [Promise], then [Locator.EvaluateHandleAsync(expression, arg, options)](./api/class-locator.mdx#locator-evaluate-handle) would wait for the promise to resolve and return its value.

See [Page.EvaluateHandleAsync(expression, arg)](./api/class-page.mdx#page-evaluate-handle) for more details.

## Locator.FillAsync(value, options) {#locator-fill}
- `value`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-value"/> &#60;[string]&#62; Value to set for the `<input>`, `<textarea>` or `[contenteditable]` element.<a href="#locator-fill-option-value" class="list-anchor">#</a>
- `options` &#60;`LocatorFillOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-fill-option-force" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-fill-option-no-wait-after" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-fill-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-fill-return"/> &#60;[void]&#62;<a href="#locator-fill-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, focuses the element, fills it and triggers an `input` event after filling. Note that you can pass an empty string to clear the input field.

If the target element is not an `<input>`, `<textarea>` or `[contenteditable]` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be filled instead.

To send fine-grained keyboard events, use [Locator.TypeAsync(text, options)](./api/class-locator.mdx#locator-type).

## Locator.First {#locator-first}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-first-return"/> &#60;[Locator]&#62;<a href="#locator-first-return" class="list-anchor">#</a>

Returns locator to the first matching element.

## Locator.FocusAsync(options) {#locator-focus}
- `options` &#60;`LocatorFocusOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-focus-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-focus-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-focus-return"/> &#60;[void]&#62;<a href="#locator-focus-return" class="list-anchor">#</a>

Calls [focus](https://developer.mozilla.org/en-US/docs/Web/API/HTMLElement/focus) on the element.

## Locator.FrameLocator(selector) {#locator-frame-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-frame-locator-option-selector"/> &#60;[string]&#62; A selector to use when resolving DOM element. See [working with selectors](./selectors.mdx) for more details.<a href="#locator-frame-locator-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-frame-locator-return"/> &#60;[FrameLocator]&#62;<a href="#locator-frame-locator-return" class="list-anchor">#</a>

When working with iframes, you can create a frame locator that will enter the iframe and allow selecting elements in that iframe:

```csharp
var locator = page.FrameLocator("iframe").Locator("text=Submit");
await locator.ClickAsync();
```

## Locator.GetAttributeAsync(name, options) {#locator-get-attribute}
- `name`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-option-name"/> &#60;[string]&#62; Attribute name to get the value for.<a href="#locator-get-attribute-option-name" class="list-anchor">#</a>
- `options` &#60;`LocatorGetAttributeOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-get-attribute-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-get-attribute-return"/> &#60;[string]?&#62;<a href="#locator-get-attribute-return" class="list-anchor">#</a>

Returns element attribute value.

## Locator.HoverAsync(options) {#locator-hover}
- `options` &#60;`LocatorHoverOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-hover-option-force" class="list-anchor">#</a>
  - `Modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-modifiers"/> &#60;[IEnumerable]?<`enum KeyboardModifier { Alt, Control, Meta, Shift }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-hover-option-modifiers" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-hover-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-hover-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-hover-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-hover-return"/> &#60;[void]&#62;<a href="#locator-hover-return" class="list-anchor">#</a>

This method hovers over the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to hover over the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.InnerHTMLAsync(options) {#locator-inner-html}
- `options` &#60;`LocatorInnerHTMLOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-html-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-inner-html-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-html-return"/> &#60;[string]&#62;<a href="#locator-inner-html-return" class="list-anchor">#</a>

Returns the `element.innerHTML`.

## Locator.InnerTextAsync(options) {#locator-inner-text}
- `options` &#60;`LocatorInnerTextOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-text-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-inner-text-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-inner-text-return"/> &#60;[string]&#62;<a href="#locator-inner-text-return" class="list-anchor">#</a>

Returns the `element.innerText`.

## Locator.InputValueAsync(options) {#locator-input-value}
- `options` &#60;`LocatorInputValueOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-input-value-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-input-value-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-input-value-return"/> &#60;[string]&#62;<a href="#locator-input-value-return" class="list-anchor">#</a>

Returns `input.value` for `<input>` or `<textarea>` or `<select>` element. Throws for non-input elements.

## Locator.IsCheckedAsync(options) {#locator-is-checked}
- `options` &#60;`LocatorIsCheckedOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-checked-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-checked-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-checked-return"/> &#60;[bool]&#62;<a href="#locator-is-checked-return" class="list-anchor">#</a>

Returns whether the element is checked. Throws if the element is not a checkbox or radio input.

## Locator.IsDisabledAsync(options) {#locator-is-disabled}
- `options` &#60;`LocatorIsDisabledOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-disabled-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-disabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-disabled-return"/> &#60;[bool]&#62;<a href="#locator-is-disabled-return" class="list-anchor">#</a>

Returns whether the element is disabled, the opposite of [enabled](./actionability.mdx#enabled).

## Locator.IsEditableAsync(options) {#locator-is-editable}
- `options` &#60;`LocatorIsEditableOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-editable-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-editable-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-editable-return"/> &#60;[bool]&#62;<a href="#locator-is-editable-return" class="list-anchor">#</a>

Returns whether the element is [editable](./actionability.mdx#editable).

## Locator.IsEnabledAsync(options) {#locator-is-enabled}
- `options` &#60;`LocatorIsEnabledOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-enabled-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-is-enabled-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-enabled-return"/> &#60;[bool]&#62;<a href="#locator-is-enabled-return" class="list-anchor">#</a>

Returns whether the element is [enabled](./actionability.mdx#enabled).

## Locator.IsHiddenAsync(options) {#locator-is-hidden}
- `options` &#60;`LocatorIsHiddenOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-hidden-option-timeout"/> &#60;[double]?&#62; **DEPRECATED** This option is ignored. [Locator.IsHiddenAsync(options)](./api/class-locator.mdx#locator-is-hidden) does not wait for the element to become hidden and returns immediately.<a href="#locator-is-hidden-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-hidden-return"/> &#60;[bool]&#62;<a href="#locator-is-hidden-return" class="list-anchor">#</a>

Returns whether the element is hidden, the opposite of [visible](./actionability.mdx#visible).

## Locator.IsVisibleAsync(options) {#locator-is-visible}
- `options` &#60;`LocatorIsVisibleOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-visible-option-timeout"/> &#60;[double]?&#62; **DEPRECATED** This option is ignored. [Locator.IsVisibleAsync(options)](./api/class-locator.mdx#locator-is-visible) does not wait for the element to become visible and returns immediately.<a href="#locator-is-visible-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-is-visible-return"/> &#60;[bool]&#62;<a href="#locator-is-visible-return" class="list-anchor">#</a>

Returns whether the element is [visible](./actionability.mdx#visible).

## Locator.Last {#locator-last}
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-last-return"/> &#60;[Locator]&#62;<a href="#locator-last-return" class="list-anchor">#</a>

Returns locator to the last matching element.

## Locator.Locator(selector) {#locator-locator}
- `selector`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-option-selector"/> &#60;[string]&#62; A selector to use when resolving DOM element. See [working with selectors](./selectors.mdx) for more details.<a href="#locator-locator-option-selector" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-locator-return"/> &#60;[Locator]&#62;<a href="#locator-locator-return" class="list-anchor">#</a>

The method finds an element matching the specified selector in the `Locator`'s subtree.

## Locator.Nth(index) {#locator-nth}
- `index`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-nth-option-index"/> &#60;[int]&#62;<a href="#locator-nth-option-index" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-nth-return"/> &#60;[Locator]&#62;<a href="#locator-nth-return" class="list-anchor">#</a>

Returns locator to the n-th matching element.

## Locator.PressAsync(key, options) {#locator-press}
- `key`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-key"/> &#60;[string]&#62; Name of the key to press or a character to generate, such as `ArrowLeft` or `a`.<a href="#locator-press-option-key" class="list-anchor">#</a>
- `options` &#60;`LocatorPressOptions?`&#62;
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-delay"/> &#60;[double]?&#62; Time to wait between `keydown` and `keyup` in milliseconds. Defaults to 0.<a href="#locator-press-option-delay" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-press-option-no-wait-after" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-press-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-press-return"/> &#60;[void]&#62;<a href="#locator-press-return" class="list-anchor">#</a>

Focuses the element, and then uses [Keyboard.DownAsync(key)](./api/class-keyboard.mdx#keyboard-down) and [Keyboard.UpAsync(key)](./api/class-keyboard.mdx#keyboard-up).

`key` can specify the intended [keyboardEvent.key](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key) value or a single character to generate the text for. A superset of the `key` values can be found [here](https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent/key/Key_Values). Examples of the keys are:

`F1` - `F12`, `Digit0`- `Digit9`, `KeyA`- `KeyZ`, `Backquote`, `Minus`, `Equal`, `Backslash`, `Backspace`, `Tab`, `Delete`, `Escape`, `ArrowDown`, `End`, `Enter`, `Home`, `Insert`, `PageDown`, `PageUp`, `ArrowRight`, `ArrowUp`, etc.

Following modification shortcuts are also supported: `Shift`, `Control`, `Alt`, `Meta`, `ShiftLeft`.

Holding down `Shift` will type the text that corresponds to the `key` in the upper case.

If `key` is a single character, it is case-sensitive, so the values `a` and `A` will generate different respective texts.

Shortcuts such as `key: "Control+o"` or `key: "Control+Shift+T"` are supported as well. When specified with the modifier, modifier is pressed and being held while the subsequent key is being pressed.

## Locator.ScreenshotAsync(options) {#locator-screenshot}
- `options` &#60;`LocatorScreenshotOptions?`&#62;
  - `OmitBackground`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-omit-background"/> &#60;[bool]?&#62; Hides default white background and allows capturing screenshots with transparency. Not applicable to `jpeg` images. Defaults to `false`.<a href="#locator-screenshot-option-omit-background" class="list-anchor">#</a>
  - `Path`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-path"/> &#60;[string]?&#62; The file path to save the image to. The screenshot type will be inferred from file extension. If `path` is a relative path, then it is resolved relative to the current working directory. If no path is provided, the image won't be saved to the disk.<a href="#locator-screenshot-option-path" class="list-anchor">#</a>
  - `Quality`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-quality"/> &#60;[int]?&#62; The quality of the image, between 0-100. Not applicable to `png` images.<a href="#locator-screenshot-option-quality" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-screenshot-option-timeout" class="list-anchor">#</a>
  - `Type`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-option-type"/> &#60;`enum ScreenshotType { Png, Jpeg }?`&#62; Specify screenshot type, defaults to `png`.<a href="#locator-screenshot-option-type" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-screenshot-return"/> &#60;[byte]&#91;&#93;&#62;<a href="#locator-screenshot-return" class="list-anchor">#</a>

Returns the buffer with the captured screenshot.

This method waits for the [actionability](./actionability.mdx) checks, then scrolls element into view before taking a screenshot. If the element is detached from DOM, the method throws an error.

## Locator.ScrollIntoViewIfNeededAsync(options) {#locator-scroll-into-view-if-needed}
- `options` &#60;`LocatorScrollIntoViewIfNeededOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-scroll-into-view-if-needed-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-scroll-into-view-if-needed-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-scroll-into-view-if-needed-return"/> &#60;[void]&#62;<a href="#locator-scroll-into-view-if-needed-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, then tries to scroll element into view, unless it is completely visible as defined by [IntersectionObserver](https://developer.mozilla.org/en-US/docs/Web/API/Intersection_Observer_API)'s `ratio`.

## Locator.SelectOptionAsync(values, options) {#locator-select-option}
- `values`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-values"/> &#60;[string]?|[ElementHandle]?|[IEnumerable]?<[string]>|`SelectOption`|[IEnumerable]?<[ElementHandle]>|[IEnumerable]?<`SelectOption`>&#62; Options to select. If the `<select>` has the `multiple` attribute, all matching options are selected, otherwise only the first option matching one of the passed options is selected. String values are equivalent to `{value:'string'}`. Option is considered matching if all specified properties match.<a href="#locator-select-option-option-values" class="list-anchor">#</a>
  - `Value` &#60;[string]?&#62; Matches by `option.value`. Optional.
  - `Label` &#60;[string]?&#62; Matches by `option.label`. Optional.
  - `Index` &#60;[int]?&#62; Matches by the index. Optional.
- `options` &#60;`LocatorSelectOptionOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-select-option-option-force" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-select-option-option-no-wait-after" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-select-option-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-option-return"/> &#60;[IEnumerable]<[string]>&#62;<a href="#locator-select-option-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, waits until all specified options are present in the `<select>` element and selects these options.

If the target element is not a `<select>` element, this method throws an error. However, if the element is inside the `<label>` element that has an associated [control](https://developer.mozilla.org/en-US/docs/Web/API/HTMLLabelElement/control), the control will be used instead.

Returns the array of option values that have been successfully selected.

Triggers a `change` and `input` event once all the provided options have been selected.

```csharp
// single selection matching the value
await element.SelectOptionAsync(new[] { "blue" });
// single selection matching the label
await element.SelectOptionAsync(new[] { new SelectOptionValue() { Label = "blue" } });
// multiple selection
await element.SelectOptionAsync(new[] { "red", "green", "blue" });
// multiple selection for blue, red and second option
await element.SelectOptionAsync(new[] {
    new SelectOptionValue() { Label = "blue" },
    new SelectOptionValue() { Index = 2 },
    new SelectOptionValue() { Value = "red" }});
```

## Locator.SelectTextAsync(options) {#locator-select-text}
- `options` &#60;`LocatorSelectTextOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-select-text-option-force" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-select-text-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-select-text-return"/> &#60;[void]&#62;<a href="#locator-select-text-return" class="list-anchor">#</a>

This method waits for [actionability](./actionability.mdx) checks, then focuses the element and selects all its text content.

## Locator.SetCheckedAsync(checked, options) {#locator-set-checked}
- `checkedState`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-checked"/> &#60;[bool]&#62; Whether to check or uncheck the checkbox.<a href="#locator-set-checked-option-checked" class="list-anchor">#</a>
- `options` &#60;`LocatorSetCheckedOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-set-checked-option-force" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-set-checked-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-set-checked-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-set-checked-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-set-checked-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-checked-return"/> &#60;[void]&#62;<a href="#locator-set-checked-return" class="list-anchor">#</a>

This method checks or unchecks an element by performing the following steps:
1. Ensure that matched element is a checkbox or a radio input. If not, this method throws.
1. If the element already has the right checked state, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the matched element, unless `force` option is set. If the element is detached during the checks, the whole action is retried.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now checked or unchecked. If not, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.SetInputFilesAsync(files, options) {#locator-set-input-files}
- `files`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-files"/> &#60;[string]|[IEnumerable]<[string]>|`FilePayload`|[IEnumerable]<`FilePayload`>&#62;<a href="#locator-set-input-files-option-files" class="list-anchor">#</a>
  - `Name` &#60;[string]&#62; File name
  - `MimeType` &#60;[string]&#62; File type
  - `Buffer` &#60;[byte]&#91;&#93;&#62; File content
- `options` &#60;`LocatorSetInputFilesOptions?`&#62;
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-set-input-files-option-no-wait-after" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-set-input-files-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-set-input-files-return"/> &#60;[void]&#62;<a href="#locator-set-input-files-return" class="list-anchor">#</a>

This method expects `element` to point to an [input element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input).

Sets the value of the file input to these file paths or files. If some of the `filePaths` are relative paths, then they are resolved relative to the the current working directory. For empty array, clears the selected files.

## Locator.TapAsync(options) {#locator-tap}
- `options` &#60;`LocatorTapOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-tap-option-force" class="list-anchor">#</a>
  - `Modifiers`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-modifiers"/> &#60;[IEnumerable]?<`enum KeyboardModifier { Alt, Control, Meta, Shift }`>&#62; Modifier keys to press. Ensures that only these modifiers are pressed during the operation, and then restores current modifiers back. If not specified, currently pressed modifiers are used.<a href="#locator-tap-option-modifiers" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-tap-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-tap-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-tap-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-tap-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-tap-return"/> &#60;[void]&#62;<a href="#locator-tap-return" class="list-anchor">#</a>

This method taps the element by performing the following steps:
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Touchscreen](./api/class-page.mdx#page-touchscreen) to tap the center of the element, or the specified `position`.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

:::note
`element.tap()` requires that the `hasTouch` option of the browser context be set to true.
:::

## Locator.TextContentAsync(options) {#locator-text-content}
- `options` &#60;`LocatorTextContentOptions?`&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-text-content-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-text-content-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-text-content-return"/> &#60;[string]?&#62;<a href="#locator-text-content-return" class="list-anchor">#</a>

Returns the `node.textContent`.

## Locator.TypeAsync(text, options) {#locator-type}
- `text`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-text"/> &#60;[string]&#62; A text to type into a focused element.<a href="#locator-type-option-text" class="list-anchor">#</a>
- `options` &#60;`LocatorTypeOptions?`&#62;
  - `Delay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-delay"/> &#60;[double]?&#62; Time to wait between key presses in milliseconds. Defaults to 0.<a href="#locator-type-option-delay" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-type-option-no-wait-after" class="list-anchor">#</a>
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-type-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-type-return"/> &#60;[void]&#62;<a href="#locator-type-return" class="list-anchor">#</a>

Focuses the element, and then sends a `keydown`, `keypress`/`input`, and `keyup` event for each character in the text.

To press a special key, like `Control` or `ArrowDown`, use [Locator.PressAsync(key, options)](./api/class-locator.mdx#locator-press).

```csharp
await element.TypeAsync("Hello"); // Types instantly
await element.TypeAsync("World", delay: 100); // Types slower, like a user
```

An example of typing into a text field and then submitting the form:

```csharp
var element = page.Locator("input");
await element.TypeAsync("some text");
await element.PressAsync("Enter");
```

## Locator.UncheckAsync(options) {#locator-uncheck}
- `options` &#60;`LocatorUncheckOptions?`&#62;
  - `Force`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-force"/> &#60;[bool]?&#62; Whether to bypass the [actionability](./actionability.mdx) checks. Defaults to `false`.<a href="#locator-uncheck-option-force" class="list-anchor">#</a>
  - `NoWaitAfter`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-no-wait-after"/> &#60;[bool]?&#62; Actions that initiate navigations are waiting for these navigations to happen and for pages to start loading. You can opt out of waiting via setting this flag. You would only need this option in the exceptional cases such as navigating to inaccessible pages. Defaults to `false`.<a href="#locator-uncheck-option-no-wait-after" class="list-anchor">#</a>
  - `Position`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-position"/> &#60;Position?&#62; A point to use relative to the top-left corner of element padding box. If not specified, uses some visible point of the element.<a href="#locator-uncheck-option-position" class="list-anchor">#</a>
    - `X` &#60;[double]&#62;
    - `Y` &#60;[double]&#62;
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-uncheck-option-timeout" class="list-anchor">#</a>
  - `Trial`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-option-trial"/> &#60;[bool]?&#62; When set, this method only performs the [actionability](./actionability.mdx) checks and skips the action. Defaults to `false`. Useful to wait until the element is ready for the action without performing it.<a href="#locator-uncheck-option-trial" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-uncheck-return"/> &#60;[void]&#62;<a href="#locator-uncheck-return" class="list-anchor">#</a>

This method checks the element by performing the following steps:
1. Ensure that element is a checkbox or a radio input. If not, this method throws. If the element is already unchecked, this method returns immediately.
1. Wait for [actionability](./actionability.mdx) checks on the element, unless `force` option is set.
1. Scroll the element into view if needed.
1. Use [Page.Mouse](./api/class-page.mdx#page-mouse) to click in the center of the element.
1. Wait for initiated navigations to either succeed or fail, unless `noWaitAfter` option is set.
1. Ensure that the element is now unchecked. If not, this method throws.

If the element is detached from the DOM at any moment during the action, this method throws.

When all steps combined have not finished during the specified `timeout`, this method throws a [TimeoutError]. Passing zero timeout disables this.

## Locator.WaitForAsync(options) {#locator-wait-for}
- `options` &#60;`LocatorWaitForOptions?`&#62;
  - `State`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-option-state"/> &#60;`enum WaitForSelectorState { Attached, Detached, Visible, Hidden }?`&#62; Defaults to `'visible'`. Can be either:<a href="#locator-wait-for-option-state" class="list-anchor">#</a>
    * `'attached'` - wait for element to be present in DOM.
    * `'detached'` - wait for element to not be present in DOM.
    * `'visible'` - wait for element to have non-empty bounding box and no `visibility:hidden`. Note that element without any content or with `display:none` has an empty bounding box and is not considered visible.
    * `'hidden'` - wait for element to be either detached from DOM, or have an empty bounding box or `visibility:hidden`. This is opposite to the `'visible'` option.
  - `Timeout`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-option-timeout"/> &#60;[double]?&#62; Maximum time in milliseconds, defaults to 30 seconds, pass `0` to disable timeout. The default value can be changed by using the [BrowserContext.SetDefaultTimeout(timeout)](./api/class-browsercontext.mdx#browser-context-set-default-timeout) or [Page.SetDefaultTimeout(timeout)](./api/class-page.mdx#page-set-default-timeout) methods.<a href="#locator-wait-for-option-timeout" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="locator-wait-for-return"/> &#60;[void]&#62;<a href="#locator-wait-for-return" class="list-anchor">#</a>

Returns when element specified by locator satisfies the `state` option.

If target element already satisfies the condition, the method returns immediately. Otherwise, waits for up to `timeout` milliseconds until the condition is met.

```csharp
var orderSent = page.Locator("#order-sent");
orderSent.WaitForAsync();
```


[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[bool]: https://docs.microsoft.com/en-us/dotnet/api/system.boolean "bool"
[double]: https://docs.microsoft.com/en-us/dotnet/api/system.double "double"
[byte]: https://docs.microsoft.com/en-us/dotnet/api/system.byte "byte"
[int]: https://docs.microsoft.com/en-us/dotnet/api/system.int32 "int"
[void]: https://docs.microsoft.com/en-us/dotnet/csharp/language-reference/builtin-types/void "void"
[string]: https://docs.microsoft.com/en-us/dotnet/api/system.string "string"
[URL]: https://nodejs.org/api/url.html "URL"
[Regex]: https://docs.microsoft.com/en-us/dotnet/api/system.text.regularexpressions.regex "Regex"

[Action]: https://docs.microsoft.com/en-us/dotnet/api/system.action-1 "Action"
[Func]: https://docs.microsoft.com/en-us/dotnet/api/system.func-2 "Func"
[IEnumerable]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.ienumerable "IEnumerable"
[IDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.idictionary "IDictionary"
[Task]: https://docs.microsoft.com/en-us/dotnet/api/system.threading.tasks.task?view=net-5.0 "Task"
[IReadOnlyDictionary]: https://docs.microsoft.com/en-us/dotnet/api/system.collections.generic.ireadonlydictionary-2 "IReadOnlyDictionary"
[JsonElement]: https://docs.microsoft.com/en-us/dotnet/api/system.text.json.jsonelement "JsonElement"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
